--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,8 +1,8 @@
 <%= form_for(@article) do |f| %>
   <ul>
-  <% @article.errors.full_messages.each do |error| %>
-    <li><%= error %></li>
-  <% end %>
+    <% @article.errors.full_messages.each do |error| %>
+      <li><%= error %></li>
+    <% end %>
   </ul>
   <p>
     <%= f.label :title %><br />
@@ -11,6 +11,10 @@
   <p>
     <%= f.label :body %><br />
     <%= f.text_area :body %>
+  </p>
+  <p>
+    <%= f.label :tag_list %><br />
+    <%= f.text_field :tag_list %>
   </p>
   <p>
     <%= f.submit %>
